# AI4chem

./: PROJECT_PLAN.md  README.md  Test.ipynb
Notebooks/: 00_environment_check.ipynb  01_data_loading.ipynb  02_eda.ipynb  03_preprocessing.ipynb  04_statistical_analysis.ipynb  05_ml_classification.ipynb  06_glycan_enrichment.ipynb  07_glycan_embedding.ipynb  08_summary_figures.ipynb
files/: .gitignore  pyproject.toml
files/data/glycan_embedding/: df_species.pkl  glycan_list.csv
files/data/input/: exogenous_standards.csv
files/data/processed/: raw_aligned.pkl
files/results/: embedding_results.pkl  enrichment_results.pkl  model_results.pkl  statistical_results.pkl
